--- a/assets/styles/tailwind.css
+++ b/assets/styles/tailwind.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 @config "../../tailwind.config.js";
 
-
+@custom-variant dark (&:where(.dark, .dark *));
 /* INPUT */
 input:disabled {
   @apply bg-gray-50 cursor-not-allowed;
